--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
 <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <!-- App Title -->
     <title>Web App - Simple Interest Calculator</title>
 </head>
 
 <body>
     <div class="maindiv">
+        <!-- Calculator Title -->
         <h1>Simple Interest Calculator</h1>
 
+        <!-- Amount Element -->
         Amount <input type="number" id="principal"> <br />
+        <!-- Rate Element -->
         Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange={updateRate()}>
+        <!-- Rate Value Element -->
         <span id="rate_val">
             10.25%
         </span> <br />
+        <!-- No. of Years Element -->
         No. of Years <select id="years">
+            <!-- Values of the input years -->
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -28,9 +35,12 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select> <br />
+        <!-- Button for computing the interest -->
         <button onclick={compute()}>Compute Interest</button> <br />
+        <!-- Result of computing the interests -->
         <span id="result">
         </span>
+        <!-- Footer value -->
         <footer>
 
             &#169; This Calculator belongs to farodriguez
